# CS50xFinalProject

./: README.md  app.py  highscores.db  main.py  pyproject.toml
CS50xFinalProject/: app.py  requirements.txt
CS50xFinalProject/static/css/: styles.css
CS50xFinalProject/static/game/: main.py
game/: Whack-A-Duck.py  main.py
static/css/: styles.css
static/game/: highscores.db  main.py  settings.py  updateDB.py
templates/: index.html
